--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -749,34 +749,36 @@ FBA-Inbound-Aufträge anzeigen:
 | *Auftrags-ID*
 | ID des FBA-Inbound-Auftrags eingeben, um nach dem Auftrag mit dieser ID zu suchen.
 
-| *Status*
+| *Auftragsstatus*
 | Status wählen, um nach Aufträgen in diesem Status zu suchen. +
 Die Status *Offen*, *Erledigt* und *Alle* stehen zur Verfügung. +
 *_Hinweis:_* Wenn du den Versand von einem Amazon-Transportpartner durchführen lässt, werden im Status *Erledigt* alle Aufträge angezeigt, die bestätigt wurden. Wenn du mit einem eigenen Versanddienstleister versendest, werden im Status *Erledigt* alle Aufträge angezeigt, bei denen bereits eine Sendungsnummer vorhanden ist.
 
 2+^| Angezeigte Informationen
 
-| *Eigner*
-|Die Person, die die Umbuchung erstellt hat
+| *Eigner* (optional)
+|Die Person, die die Umbuchung erstellt hat. Die Spalte *Eigner* wird standardmäßig nicht angezeigt.
 
 | *Ausgangslager*
 |Das plentymarkets FBA-Lager
 
 | *Auftrags-ID*
-|plentymarkets ID des FBA-Inbound-Auftrags
+|Die plentymarkets ID des FBA-Inbound-Auftrags
 
 | *Sendungs-ID*
-|Die ID, die Amazon der Sendung beim Erstellen im Amazon Seller Central zugewiesen hat
+|Die ID, die Amazon der Sendung beim Erstellen im Amazon Seller Central zugewiesen hat.
 
 | *Versendete Artikel*
 |Die Anzahl aller versendeten Artikel.
 
+| *Artikelstatus*
+|Die farbigen Punkte zeigen den Status der versendeten Artikel: +
+Grün: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Alle versendeten Artikel wurden erhalten. +
+Gelb: Die Sendung befindet sich im Status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* oder *CHECKED_IN*. Die versendeten Artikel befinden sich noch in Bearbeitung. +
+Rot: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Nicht alle versendeten Artikel wurden erhalten.
+
 | *Erhaltene Artikel*
 |Alle Artikel, die sich bei Amazon im Sendungsstatus *RECEIVING* oder *CLOSED* befinden. +
-Die farbigen Punkte zeigen den jeweiligen Sendungsstatus an: +
-Grün: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Die Anzahl der erhaltenen Artikel entspricht hier der Anzahl der versendeten Artikel. +
-Gelb: Die Sendung befindet sich im Status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* oder *CHECKED_IN*. Es wird keine Anzahl von Artikeln angezeigt. +
-Rot: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Die Anzahl der erhaltenen Artikel ist hier geringer als die Anzahl der versendeten Artikel.
 
 | *Sendungsstatus*
 a|Der Status, in dem sich die Amazon-Sendung aktuell befindet. Die folgenden, bei Amazon verfügbaren Status werden hier angezeigt: +
@@ -791,9 +793,58 @@ a|Der Status, in dem sich die Amazon-Sendung aktuell befindet. Die folgenden, be
 *DELETED*: Die Sendung wurde von dem:der Händler:in storniert, bevor die Sendung an das Amazon Fulfillment-Center gesendet wurde. +
 *ERROR*: Ein Fehler ist aufgetreten und die Sendung wurde nicht von Amazon bearbeitet.
 
-| *Status*
+| *Auftragsstatus*
 | Status des Auftrags. +
 Es gibt die Status *Offen*, *Erledigt* und *Alle*.
+|====
+
+[#customise-columns]
+=== Übersicht individuell gestalten
+
+Du kannst die Übersicht an deine Bedürfnisse anpassen.
+
+[cols="1,6a"]
+|====
+|Symbol |Erläuterung
+
+| icon:settings[set=material]
+|Welche Spalten sollen in der Übersicht enthalten sein?
+
+. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]).
+. Wähle alle von dir gewünschten Spalten (icon:check_box[set=material, role=skyBlue]).
+. Klicke auf *Bestätigen*.
+
+[.collapseBox]
+.Verfügbare Spalten
+--
+* Eigner
+* Ausgangslager
+* Auftrags-ID
+* Sendungs-ID
+* Versendete Artikel
+* Artikelstatus
+* Erhaltene Artikel
+* Sendungsstatus
+* Auftragsstatus
+
+--
+
+| icon:drag_indicator[set=material]
+|In welcher Reihenfolge sollen die Spalten angezeigt werden?
+
+. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]).
+. Bewege deinen Mauszeiger über einen Eintrag mit dem Symbol icon:drag_indicator[set=material]. +
+→ Dein Mauszeiger ändert seine Form (icon:open_with[set=material]).
+. Ziehe den Eintrag an die gewünschte Stelle.
+. Klicke auf *Bestätigen*.
+
+| icon:arrow_downward[set=material] / icon:arrow_upward[set=material]
+|Sollen die Ergebnisse in aufsteigender oder in absteigender Reihenfolge angezeigt werden?
+
+. Bewege deinen Mauszeiger über eine Spaltenüberschrift. +
+→ Ein Pfeil wird angezeigt. +
+*_Hinweis:_* Nicht alle Spaltenüberschriften können sortiert werden.
+. Klicke auf icon:arrow_downward[set=material] oder icon:arrow_upward[set=material], um die Sortierreihenfolge zu ändern.
 |====
 
 [#160]
