--- a/docs/en-gb/modules/markets/pages/amazon-fba.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fba.adoc
@@ -750,34 +750,36 @@ Viewing FBA Inbound orders:
 | *Order ID*
 | Enter the ID of an FBA Inbound order to search for the order with this ID.
 
-| *Status*
+| *Order status*
 | Select a status to search for orders in this status. +
 The statuses *Open*, *Done* and *All* are available. +
 *_Note:_* If your parcels are shipped with an Amazon partnered carrier and you select the status *Done*, all orders that were confirmed are displayed. If you send your parcels with your own shipping service provider and you select the status *Done*, all orders that have a tracking number are displayed.
 
 2+^| Information listed
 
-| *Owner*
-|The person who created the redistribution
+| *Owner* (optional)
+|The person who created the redistribution. The *owner* column is not displayed by default.
 
 | *Sender warehouse*
 |The plentymarkets FBA warehouse
 
 | *Order ID*
-|plentymarkets ID of the FBA Inbound order
+|The plentymarkets ID of the FBA Inbound order
 
 | *Shipment ID*
-|The ID that Amazon assigned to the shipment when you created it in Amazon Seller Central
+|The ID that Amazon assigned to the shipment when you created it in Amazon Seller Central.
 
 | *Shipped items*
 |The total number of shipped items.
 
+| *Items' status*
+|The coloured dots show the status of the shipped items: +
+green: The shipment has the status *RECEIVING* or *CLOSED*. All shipped items have been received. +
+yellow: The shipment has the status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* or *CHECKED_IN*. The shipped items are still being processed. +
+red: The shipment has the status *RECEIVING* or *CLOSED*. Not all shipped items have been received.
+
 | *Received items*
 |All items with the Amazon shipment status *RECEIVING* or *CLOSED*. +
-The coloured dots show the respective shipment status: +
-green: The shipment has the status *RECEIVING* or *CLOSED*. Here, the number of received items equals the number of shipped items. +
-yellow: The shipment has the status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* or *CHECKED_IN*. No number of items is shown here. +
-red: The shipment has the status *RECEIVING* or *CLOSED*. Here, the number of received items is lower than the number of shipped items.
 
 | *Shipment status*
 a|The current status of the Amazon shipment. The following statuses available at Amazon are shown here: +
@@ -792,10 +794,59 @@ a|The current status of the Amazon shipment. The following statuses available at
 *DELETED*: The shipment was cancelled by the seller before the shipment was sent to the Amazon fulfillment center. +
 *ERROR*: There was an error with the shipment and it was not processed by Amazon.
 
-| *Status*
+| *Order status*
 | The status of the order. +
 The statuses *Open*, *Done* and *All* are available.
 
+|====
+
+[#customise-columns]
+=== Customising the overview
+
+You can adjust the overview to your needs.
+
+[cols="1,6a"]
+|====
+|Symbol |Explanation
+
+| icon:settings[set=material]
+|Which columns should be included in the overview?
+
+. Click on *Configure columns* (icon:settings[set=material]).
+. Select the desired columns (icon:check_box[set=material, role=skyBlue]).
+. Click on *Confirm*.
+
+[.collapseBox]
+.Available columns
+--
+* Owner
+* Sender warehouse
+* Order ID
+* Shipment ID
+* Shipped items
+* Items’ status
+* Received items
+* Shipment status
+* Order status
+
+--
+
+| icon:drag_indicator[set=material]
+|In which order should the columns be displayed?
+
+. Click on *Configure columns* (icon:settings[set=material]).
+. Move your mouse cursor over the entry with the symbol icon:drag_indicator[set=material]. +
+→ Your mouse cursor changes its shape (icon:open_with[set=material]).
+. Move the entry to the desired position.
+. Click on *Confirm*.
+
+| icon:arrow_downward[set=material] / icon:arrow_upward[set=material]
+|Should the results be displayed in ascending or descending order?
+
+. Move your mouse cursor over a column heading. +
+→ An arrow is displayed. +
+*_Note:_* Not all column headings can be sorted.
+. Click on icon:arrow_downward[set=material] or icon:arrow_upward[set=material] to change the sorting order.
 |====
 
 [#160]
